9/7/10 replace EasyGridBagLayout with GridPanel throughout
9/7/10 created GridPanel, will test it here than migrate to phetcommon
9/2/10 move all drag code to new capacitorlab.drag package
9/2/10 make dielectric directly draggable, use same handler as drag arrow 
9/2/10 promote drag handlers from inner classes to top-level types
8/31/10 move "Model Values" check box to Developer Controls panel
8/31/10 migrate ColoredSeparator to phetcommon
8/31/10 replace borders with separators in subpanels
8/31/10 replace CLTitledControlPanel with PhetTitledPanel
8/26/10 add stubs for Multiple Capacitors tab
7/9/10 attempt to fix plate area drag handle, still broken
7/9/10 move model listener responsibilities into drag handle nodes
7/9/10 fix drag handles for dielectric offset and plate separation 
7/8/10 add overload indicator to bar meters
5/21/10 started work on a model-independent voltmeter (incomplete, see TODO.txt)
5/20/10 copy voltmeter image files from CCK, confirmed licensing with Sam R.
5/20/10 capacitance meter
5/20/10 create base class for bar meters, refactor existing meters
# 0.00.05 (40913) May 19, 2010
5/19/10 dev version to verify model changes
5/19/10 implement new model of charge, surface charge density, and E-field, as specified by NP
5/19/10 change variable names in ModelValuesPanel to match variable names in design doc
5/19/10 rework model assertions and arg checking
5/19/10 new model of surface charge density, to avoid divide-by-zero errors when area=0
5/19/10 assert necessary model conditions
5/19/10 add support for negative dielectric offset
5/19/10 add Stored Energy meter
5/19/10 consolidate meter range constants in CLConstants
# 0.00.04 (40879) May 19, 2010
5/19/10 new model, plate charge meter, disconnect plate charge control
5/18/10 reorganize model to be similar to specification
5/18/10 add dielectric offset to model values display
5/18/10 add descriptions to model values display via tool tips