@@ -1,3 +1,4 @@
+9/7/10 doc and consolidate duplicate code in BoxNode
 9/7/10 replace EasyGridBagLayout with GridPanel throughout
 9/7/10 created GridPanel, will test it here than migrate to phetcommon
 9/2/10 move all drag code to new capacitorlab.drag package
